templates/git-apiserver_template.yaml
---
# Source: git-apiserver/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-git-apiserver
  namespace: default
  labels:
    app: "git-apiserver"
    chart: "git-apiserver-0.1.0"
    release: "release-name"
    heritage: "Helm"
spec:
  ports:
  # Port used to expose admission webhook apiserver
  - name: admission
    port: 443
    targetPort: 8443
  selector:
    app: "git-apiserver"
    release: "release-name"
---
# Source: git-apiserver/templates/deployment.yaml
# GKE returns Major:"1", Minor:"10+"
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-git-apiserver
  namespace: default
  labels:
    chart: "git-apiserver-0.1.0"
    app: "git-apiserver"
    heritage: "Helm"
    release: "release-name"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "git-apiserver"
      release: "release-name"
  template:
    metadata:
      labels:
        app: "git-apiserver"
        release: "release-name"
    spec:
      serviceAccountName: release-name-git-apiserver
      containers:
      - name: operator
        image: kubeci/git-apiserver:0.1.0
        imagePullPolicy: IfNotPresent
        args:
        - run
        - --v=3
        - --rbac=true
        - --docker-registry=kubeci
        - --secure-port=8443
        - --audit-log-path=-
        - --tls-cert-file=/var/serving-cert/tls.crt
        - --tls-private-key-file=/var/serving-cert/tls.key
        - --enable-status-subresource=true
        - --enable-analytics=true
        ports:
        - containerPort: 8443
        resources:
          requests:
            cpu: "100m"
        volumeMounts:
        - mountPath: /var/serving-cert
          name: serving-cert
      volumes:
      - name: serving-cert
        secret:
          defaultMode: 420
          secretName: release-name-git-apiserver-apiserver-cert
---
# Source: git-apiserver/templates/validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: admission.git.kube.ci
  labels:
    chart: "git-apiserver-0.1.0"
    app: "git-apiserver"
    heritage: "Helm"
    release: "release-name"
  annotations:
    "helm.sh/hook": post-install,post-upgrade
    "helm.sh/hook-delete-policy": before-hook-creation
webhooks:
- name: repository.admission.git.kube.ci
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/admission.git.kube.ci/v1alpha1/repositories
    caBundle: bm90LWNhLWNlcnQ=
  rules:
  - operations:
    - CREATE
    - UPDATE
    apiGroups:
    - git.kube.ci
    apiVersions:
    - "*"
    resources:
    - repositories
  failurePolicy: Fail
